# struct_of_array_sorter

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  README.md  example.cc  soa.cc  soa.h  soa_sort.h
output/: threading_off_results.csv  threading_on_results.csv
src/: example.cc  soa_sort.h  soa_sort_no_perm.h
tests/: CMakeLists.txt  particles.cc  unit_test.cc  utility.h
